# excitingworkflow

./: .gitignore  README.md  gitlab-ci.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
excitingworkflow.egg-info/: PKG-INFO  requires.txt  top_level.txt
excitingworkflow/src/: calculation_io.py  exciting_calculation.py  exciting_convergence_criteria.py  exciting_groundstate_calculation.py  exciting_gs_slurm_calculation.py  exciting_slurm_calculation.py  exciting_xs_calculation.py  exciting_xs_slurm_calculation.py  plot_utils.py  simple_calculation.py  workflow_utils.py
excitingworkflow/src/base/: calculation_io.py  convergence_criteria.py
excitingworkflow/src/workflows/: convergence.py
src/excitingworkflow/: calculation_io.py  exciting_calculation.py  exciting_convergence_criteria.py  exciting_groundstate_calculation.py  exciting_xs_calculation.py  exciting_xs_slurm_calculation.py
tests/: test_SimpleCalculation.py  test_calculation_io.py  test_exciting_calculation.py  test_exciting_slurm_calculation.py
tutorials/: Demo_Exciting_Calculation.ipynb  Demo_Exciting_Slurm_Calculation.ipynb
