[metadata]
name = excitingworkflow
description = Utilities for setting up and running workflows using exciting calculations.
author = SOL Group
version = 0.0.1
author_email = peschelf@physik.hu-berlin.de

[options]
packages = excitingworkflow
install_requires =
    numpy>=1.22.2
    matplotlib>=3.5.1
    requests>=2.25.1
python_requires = >=3.7
