[metadata]
name = excitingworkflow
description = Utilities for setting up and running workflows using exciting calculations.
author = SOL Group
version = 0.0.1
author_email = peschelf@physik.hu-berlin.de

[options]
packages = excitingworkflow
install_requires =
    numpy>=1.22.2
    matplotlib>=3.5.1
    requests>=2.25.1
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing=
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
excitingworkflow = py.typed

[flake8]
max-line-length = 120